     are also split into their component parts to avoid many false
     alarms in spell-checking
     
-Portuguese:
    -added/improved several rules
    -added dozens of compounds: it now has 3400+ compound words    
    
-Russian:
    -added a few rules
    -added some new rules, thanks to Julia Semenenko from WebSpellChecker.net
    -added many false friends rules (Russian/English)
    
-Slovenian:
    -fixed sentence detection so that sentences that begin with a lowercase
     character can now be detected
    
-added common punctuation and mathematical characters (=#*∗×·+÷) to the 
 set of tokenizing characters in most languages

-added new element <unify-ignore/> in XML rules to mark the parts of the unified
  sequence that are not checked (useful to ignore punctuation, connectives, or not
  inflected words)

-added new element <antipattern> (which can include <token>, <and>, <unify>, and <marker>),
  useful for marking complex multiword exceptions in rules and rulegroups (a single
  antipattern can be shared by multiple rules in the same group)

-spell checking:
   -Immunized tokens are now ignored and don't cause a spelling error anymore;
    one can also add particular contextual expressions to ignored words by using
    a new action of the disambiguator: "ignore_spelling".
   -The words in ignore.txt are checked using case conversions allowed in the
    speller dictionary (in MorfologikSpeller-based dictionaries).
    This usually means that the word added in lowercase will be accepted
    also when it is found at the beginning of the sentence; but if it is added in
    uppercase, it won't be accepted when written in lowercase.
   -updated Morfologik libraries to 1.9.0 to speed up suggestion generation in spell
    checks, not only when using replacement pairs but also for ignoring diacritics.

-stand-alone GUI:
    -The "More..." dialog now contains a link to community.languagetool.org
     with details about the matching rule

-API: