@@ -3,8 +3,8 @@
 #
 # Russian dictionary originally developed by www.aot.ru and licensing under LGPL.
 # http://www.aot.ru/download.php file rus-src-morph.tar.gz
-# or http://seman.svn.sourceforge.net/viewvc/seman/trunk/Dicts/SrcMorph/RusSrc/morphs.mrd?revision=99
-# It was partially converted to fsa format in 2008, 2010, 2011 by Yakov Reztsov. 
+# or http://sourceforge.net/p/seman/svn/HEAD/tree/trunk/Dicts/SrcMorph/RusSrc/   rev 242  file  morphs.mrd
+# It was partially converted to fsa format in 2008, 2010, 2011, 2014 by Yakov Reztsov.
 
 
 fsa.dict.separator=+
