@@ -3,7 +3,7 @@
 #
 # Russian dictionary originally developed by www.aot.ru and licensing under LGPL.
 # http://www.aot.ru/download.php file rus-src-morph.tar.gz
-# or http://seman.svn.sourceforge.net/viewvc/seman/trunk/Dicts/SrcMorph/RusSrc/morphs.mrd?revision=99
+# or   http://sourceforge.net/p/seman/svn/HEAD/tree/trunk/Dicts/SrcMorph/RusSrc/  rev 242 file  morphs.mrd
 # It was partially converted to synthesizer dictionary
 # in fsa format in 2009, 2010, 2011 by Yakov Reztsov. 
 
