@@ -13,6 +13,9 @@ ABR - аббревиатура - ABBREVIATION
 ADJ  - прилагательное - ADJECTIVE
 ADJ_Short - краткое прилагательное - SHORT ADJECTIVE
 PADJ - притяжательное прилагательное - POSESSIVE ADJECTIVE
+ADJ_S -  прилагательное в сравнительной степени сравнения - ADJECTIVE comparative  construction
+ADJ_Comp - прилагательное в превосходной степени сравнения - ADJECTIVE  superlative construction
+
 
 PRDC predicate
 PREP - предлог - PREPOSITION
@@ -215,7 +218,7 @@ right column is LanguageTool's POS tag:
  йу	ADJ:PL:R
  йф	ADJ:PL:D
  йх	ADJ:PL:V
- Рь	ADJ:PL:V	
+ Рь	ADJ:PL:V
  йц	ADJ:PL:T
  йч	ADJ:PL:P
  йш	ADJ_Short:Masc
@@ -511,7 +514,7 @@ right column is LanguageTool's POS tag:
  чд	PNN:Sin:T:P1
  че	PNN:Sin:P:P1
  вм	NNF
- ен	NNN:Neut
+ ен	NN:Neut
  Ют	NN:Masc:Sin:T:Talk
  Яа	NN:Masc:R:Talk
  ям	PRDC
