@@ -54,6 +54,7 @@ LanguageTool Change Log
     -added a few rules
     -added some new rules, thanks to Julia Semenenko from WebSpellChecker.net
     -added many false friends rules (Russian/English)
+    -updated POS tag dictionary and synthesizer dictionary from AOT.ru(Seman) rev. 242
     
 -Slovenian:
     -fixed sentence detection so that sentences that begin with a lowercase
